# GDIOCSpider

./: .gitignore  LICENSE  Pipfile  README.md  config.json  main.py  pyproject.toml  requirements.txt  settings.py  setup.sh
data_exporter/: data_exporter.py
file_scraper/: file_scraper.py  scraper_tools.py
gdiocspider/: data_exporter.py  file_scraper.py  gdrive_crawler.py  indicator_checks.py  indicator_searches.py  io_databank.py  ioc_flagger.py  ioc_patterns.py  scraper_tools.py  settings.py  valid_domain_endings.py
gdrive_crawler/src/: gdrive_crawler.py
ioc_flagger/src/: indicator_checks.py  indicator_searches.py  ioc_flagger.py  ioc_patterns.py
ioc_flagger/src/data_bank/: io_databank.py  keywords.txt  valid_domain_endings.py
ioc_flagger/test/: test_indicator_checks.py  test_indicator_searches.py
test/: test_indicator_checks.py  test_indicator_searches.py
